<resources>
    <string name="app_name" translatable="false">Asaxiy-Books</string>

    <string-array name="viewmode_text">
        <item>@string/view_mode_paging</item>
        <item>@string/view_mode_continuous</item>
    </string-array>

    <string name="loading_book">Loading Book</string>
    <string name="open_file">Open File</string>
    <string name="catalog_home">Home</string>
    <string name="book_toc">TOC</string>
    <string name="search">Search</string>
    <string name="book_rename">Rename</string>
    <string name="book_open">Open</string>
    <string name="book_delete">Delete</string>
    <string name="my_readings">My Readings</string>
    <string name="search_local">Local Search&#8230;</string>
    <string name="search_book">Book Search&#8230;</string>
    <string name="view_mode_continuous">Continuous View</string>
    <string name="view_mode_paging">Paging View</string>

    <string name="pref_rotate_title">Rotate</string>
    <string name="pref_rotate_summary">Allow screen rotate</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_storagepath_title">Sync Folder</string>
    <string name="pref_storagepath_summary">No \'Sync Folder\' selected</string>
    <string name="pref_volume_title">Volume Keys Turning</string>
    <string name="pref_volume_summary">Use volume keys to turn pages</string>

    <string name="continue_reading">Continue reading from:</string>
    <string name="sync_conflict">Sync conflict</string>
    <string name="view_mode">View Mode</string>
    <string name="image_original_size">Original Size</string>
    <string name="image_fit_to_screen">Fit To Screen</string>
    <string name="image_original_size_all_images">Original Size All Images</string>
    <string name="image_fit_to_screen_all_images">Fit To Screen All Images</string>
    <string name="keep_reading_position">Keep Position</string>
    <string name="add_more_fonts_to">Add more fonts to \'%s\'</string>
    <string name="controls_fullscreen">Fullscreen</string>
    <string name="controls_navigate">Navigate</string>
    <string name="controls_nextpage">Next page</string>
    <string name="controls_prevpage">Previous page</string>
    <string name="controls_brightness">Brightness</string>
    <string name="per_second">/s</string>
    <string name="delete_bookmark">Delete bookmark</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="bookmark_edit">Edit</string>
    <string name="book_font">Font</string>
    <string name="sort_by">Sort By ...</string>
    <string name="sort_by_name_a_z">Name A-Z</string>
    <string name="sort_by_name_z_a">Name Z-A</string>
    <string name="sort_by_added_asc">Added Asc</string>
    <string name="sort_by_added_desc">Added Desc</string>
    <string name="sort_by_opened_asc">Opened Asc</string>
    <string name="sort_by_opened_desc">Opened Desc</string>
    <string name="pref_tts_title">TTS Language</string>
</resources>
