<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="100"
        android:title="@string/bookmark_edit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_open"
        android:orderInCategory="100"
        android:title="@string/book_open"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/ShareAction"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/book_delete"
        app:showAsAction="never" />
</menu>
